@@ -1,5 +1,4 @@
-local DRTE = data.raw.tile
 local SS = settings.startup
 
-DRTE["dect-wood-floor"].walking_speed_modifier = SS["DectWoodSpeed"].value
-DRTE["dect-concrete-grid"].walking_speed_modifier = SS["DectConcreteGridSpeed"].value
+data.raw.tile["dect-wood-floor"].walking_speed_modifier = SS["DectWoodSpeed"].value
+data.raw.tile["dect-concrete-grid"].walking_speed_modifier = SS["DectConcreteGridSpeed"].value
