@@ -5,11 +5,14 @@ landfill-stack-size=[item=landfill][color=brown]Stack size[/color]
 landfill-cost=[item=landfill][color=brown]Stone cost[/color]
 landfill-results=[item=landfill][color=brown]Output amount[/color]
 landfill-energy=[color=brown]Seconds to craft/10 [/color][item=landfill]
+
 StoneBrickSpeed=[item=stone-brick][color=#D3D3D3]Stone Brick Tile Speed[/color]
+
 concrete-results=[item=concrete][color=#D3D3D3]Output amount[/color]
 concrete-energy=[item=concrete][color=#D3D3D3] Seconds to craft [/color]
 ConcreteSpeed=[item=concrete][color=#D3D3D3]Tile Speed[/color]
 HazardConcreteSpeed=[item=hazard-concrete][color=#D3D3D3]Tile Speed[/color]
+
 re-concrete-results=[item=refined-concrete][color=#D3D3D3]Output amount[/color]
 re-concrete-energy=[color=#D3D3D3]Seconds to craft [/color][item=refined-concrete]
 RefinedConcreteSpeed=[item=refined-concrete][color=#D3D3D3]Tile Speed[/color]
@@ -19,24 +22,33 @@ HazardRefinedConcreteSpeed=[item=refined-hazard-concrete][color=#D3D3D3]Tile Spe
 #[space-age]
 space-platform-foundation-energy=[color=#e1ad21]Seconds to craft[item=space-platform-foundation][/color]
 space-platform-foundation-results=[color=#e1ad21][item=space-platform-foundation]Output amount[/color]
+
 foundation-results=[item=foundation][color=gray]Output amount[/color]
 foundation-energy=[color=gray]Seconds to craft[/color][item=foundation]
+
 ice-platform-results=[item=ice-platform][color=#a6d4ff]Output amount[/color]
 ice-platform-energy=[color=#a6d4ff]Seconds to craft[/color][item=ice-platform]
+
 artificial-yumako-soil-results=[item=artificial-yumako-soil][color=green]Output amount[/color]
 artificial-yumako-soil-energy=[color=green]Seconds to craft[/color][item=artificial-yumako-soil]
+
 artificial-jellynut-soil-results=[item=artificial-jellynut-soil][color=purple]Output amount[/color]
 artificial-jellynut-soil-energy=[color=purple]Seconds to craft[/color][item=artificial-jellynut-soil]
+
 overgrowth-yumako-soil-results=[item=overgrowth-yumako-soil][color=yellow]Output amount[/color]
 overgrowth-yumako-soil-energy=[color=yellow]Seconds to craft[/color][item=overgrowth-yumako-soil]
+
 overgrowth-jellynut-soil-results=[item=overgrowth-jellynut-soil][color=pink]Output amount[/color]
 overgrowth-jellynut-soil-energy=[color=pink]Seconds to craft[/color][item=overgrowth-jellynut-soil]
 
 #Transport Drones & Forked
 road-results=[item=road][color=black]Output amount[/color]
 road-energy=[color=black]Seconds to craft[/color][item=road]
+RoadSpeed=[item=road][color=black]Tile Speed[/color]
+
 froad-results=[item=fast-road][color=black]Output amount[/color]
 froad-energy=[color=black]Seconds to craft[/color][item=fast-road]
+FastRoadSpeed=[item=fast-road][color=black]Tile Speed[/color]
 
 #Dectroio
 DectWoodSpeed=[item=dect-wood-floor][color=brown]Tile Speed[/color]
@@ -45,9 +57,12 @@ DectConcreteGridSpeed=[item=dect-concrete-grid][color=#D3D3D3]Tile Speed[/color]
 [mod-setting-description]
 #Base Game
 landfill-unlocked-from-start=[color=red]Maybe irreversible if enabled.[/color]
+
 StoneBrickSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=stone-brick]
+
 ConcreteSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=concrete]
 HazardConcreteSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=hazard-concrete]
+
 RefinedConcreteSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-concrete]
 HazardRefinedConcreteSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-hazard-concrete]
 
@@ -76,10 +91,12 @@ overgrowth-jellynut-soil-energy=Overgrowth Jellynut Soil production time.\nRever
 #Transport Drones & Forked
 road-results=Road.\nRevert to [item=road] default vaules by clicking the reset button
 road-energy=Road production time.\nRevert to [item=road] default vaules by clicking the reset button
+RoadSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=black]100% = 1, 1% = 0.01[/color]
 
 froad-results=Fast Road.\nRevert to [item=fast-road] default vaules by clicking the reset button
 froad-energy=Fast Road production time.\nRevert to [item=fast-road] default vaules by clicking the reset button
+FastRoadSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=black]100% = 1, 1% = 0.01[/color]
 
 #Dectroio
-DectWoodSpeed=[color=red]Warning: value below 1% unexpected effcts.[/color]\n[color=brown]100% = 1, 1% = 0.01[/color]
-DectConcreteGridSpeed=[color=red]Warning: value below 1% unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color]
+DectWoodSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=brown]100% = 1, 1% = 0.01[/color]
+DectConcreteGridSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color]
