@@ -34,8 +34,11 @@ overgrowth-jellynut-soil-energy=[color=pink]Tid i sekunder[/color][item=overgrow
 #Transport Drones & Forked
 road-results=[color=black]Mengde[item=road]Laget[/color]
 road-energy=[color=black]Tid i sekunder[/color][item=road]
+RoadSpeed=[item=road][color=black]Ganghastighet[/color]
+
 froad-results=[color=black]Mengde[item=fast-road]Laget[/color]
 froad-energy=[color=black]Tid i sekunder[/color][item=fast-road]
+FastRoadSpeed=[item=fast-road][color=black]Ganghastighet[/color]
 
 #Dectroio
 DectWoodSpeed=[item=dect-wood-floor][color=brown]Ganghastighet[/color]
@@ -44,11 +47,11 @@ DectConcreteGridSpeed=[item=dect-concrete-grid][color=#D3D3D3]Ganghastighet[/col
 [mod-setting-description]
 #Base Game
 landfill-unlocked-from-start=[color=red]Mulig uopprettelig hvis aktivert.[/color]
-StoneBrickSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=stone-brick]
-ConcreteSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=concrete]
-HazardConcreteSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=hazard-concrete]
-RefinedConcreteSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-concrete]
-HazardRefinedConcreteSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-hazard-concrete]
+StoneBrickSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekt.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=stone-brick]
+ConcreteSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekt.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=concrete]
+HazardConcreteSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekt.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=hazard-concrete]
+RefinedConcreteSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekt.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-concrete]
+HazardRefinedConcreteSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekt.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-hazard-concrete]
 
 #[space-age]
 space-platform-foundation-results=Romdskip Fundament resultat.\nFor standard [space-age] verdier klikk på reset knappen.
@@ -75,10 +78,12 @@ overgrowth-jellynut-soil-energy=Overgrowth Jellynut Soil produksjons tid.\nFor s
 #Transport Drones & Forked
 road-results=Vei resultat.\nFor standard [item=road]verdier klikk på reset knappen.
 road-energy=Vei produksjons tid.\nFor standard [item=road]verdier klikk på reset knappen.
+RoadSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekt.[/color]\n[color=black]100% = 1, 1% = 0.01[/color]
 
 froad-results=Motorvei resultat.\nFor standard [item=fast-road]verdier klikk på reset knappen.
 froad-energy=Motorvei produksjons tid.\nFor standard [item=fast-road]verdier klikk på reset knappen.
+FastRoadSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekt.[/color]\n[color=black]100% = 1, 1% = 0.01[/color]
 
 #Dectroio
-DectWoodSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color]\n[color=brown]100% = 1, 1% = 0.01[/color]
-DectConcreteGridSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color]
+DectWoodSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekt.[/color]\n[color=brown]100% = 1, 1% = 0.01[/color]
+DectConcreteGridSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekt.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color]
